ファイルボタンの生成

--- a/Adventure-Tool/Adventure-Tool.vcxproj
+++ b/Adventure-Tool/Adventure-Tool.vcxproj
@@ -279,6 +279,7 @@
   <ItemGroup>
     <ClCompile Include="src\Assets\FileImage.cpp" />
     <ClCompile Include="src\Assets\GameObject.cpp" />
+    <ClCompile Include="src\Assets\RibbonMenu.cpp" />
     <ClCompile Include="src\ResourceManager\ResourceManager.cpp" />
     <ClCompile Include="src\TaskSystem\TaskObject.cpp" />
     <ClCompile Include="src\TaskSystem\TaskSystem.cpp" />
@@ -289,6 +290,7 @@
   <ItemGroup>
     <ClInclude Include="src\Assets\FileImage.h" />
     <ClInclude Include="src\Assets\GameObject.h" />
+    <ClInclude Include="src\Assets\RibbonMenu.h" />
     <ClInclude Include="src\InterFace\Collider.hpp" />
     <ClInclude Include="src\InterFace\DrawInterFace.hpp" />
     <ClInclude Include="src\InterFace\EffectInterFace.hpp" />
